# lvgl_dasboard

./: .gitignore  CMakeLists.txt  Makefile.linux  PANEL_SETUP.md  build_cross.sh  build_linux.sh  info.txt  lv_conf.h  main.c  setup_tc.sh  tce_deps.sh  toolchain-i686-linux.cmake  update_panel.bat  update_panel.ps1  walk.md
.github/workflows/: build.yml
patches/: lvgl-fixes.patch
src/: agenda_manager.c  agenda_manager.h  net_manager.c  net_manager.h  radio_manager.c  radio_manager.h  time_manager.c  time_manager.h  weather.c  weather.h  wifi_manager.c  wifi_manager.h
src/ui/: calc_tab.c  calc_tab.h  calendar_tab.c  calendar_tab.h  conv_tab.c  conv_tab.h  dashboard_tab.c  dashboard_tab.h  ui.c  ui.h
